--- a/src/app/photos-table/photos-table/photos-table.component.html
+++ b/src/app/photos-table/photos-table/photos-table.component.html
@@ -31,5 +31,6 @@
         <!-- next page</label> -->
 
         <fa-icon [icon]="faChevronRight" (click)="switchItems(false)" title="next page"></fa-icon>
+        <fa-icon [icon]="faPlus" (click)="addNewPhoto()" title="add photo"></fa-icon>
     </div>
 </div>
